reports/lineal.log
Traceback (most recent call last):
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/sasha/miniconda3/envs/sxs-libro-interactivo/lib/python3.8/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
t = np.linspace(-10,10,100)
blt.figure()
tt= bqplot.Tooltip(fields=['x', 'y','index'], formats=['.1f', '.2f','d'])
# blt.scatter(x=t,y=r(t),tooltip=tt)
blt.plot(x=t,y=r(t),'m:d',colors=['orangered'])
blt.show()
------------------

[0;36m  File [0;32m"<ipython-input-9-d2df8140a50c>"[0;36m, line [0;32m5[0m
[0;31m    blt.plot(x=t,y=r(t),'m:d',colors=['orangered'])[0m
[0m                        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m positional argument follows keyword argument

SyntaxError: positional argument follows keyword argument (<ipython-input-9-d2df8140a50c>, line 5)

